smaller sidebar; fixed general left align.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,10 +17,15 @@ th.id {
     margin-left: 0;
 }
 
-
 .attribute {
-    margin: 10px 40px;
-    width: 100px;
+    margin: 6px 30px 0px 0px;
+    width: 90px;
+    float: left;
+}
+
+.selects {
+    margin: 6px 30px 0px 0px;
+    width: 166px;
     float: left;
 }
 
