--- a/src/css/simple-sidebar.css
+++ b/src/css/simple-sidebar.css
@@ -1,12 +1,12 @@
 #wrapper {
-  padding-left: 250px;
+  padding-left: 200px;
   transition: all 0.4s ease 0s;
 }
 
 #sidebar-wrapper {
-  margin-left: -250px;
-  left: 250px;
-  width: 250px;
+  margin-left: -200px;
+  left: 200px;
+  width: 200px;
   background: #000;
   position: fixed;
   height: 100%;
@@ -22,7 +22,7 @@
 .sidebar-nav {
   position: absolute;
   top: 0;
-  width: 250px;
+  width: 200px;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -97,12 +97,12 @@
 
 #wrapper.active {
   position: relative;
-  left: 250px;
+  left: 200px;
 }
 
 #wrapper.active #sidebar-wrapper {
-  left: 250px;
-  width: 250px;
+  left: 200px;
+  width: 200px;
   transition: all 0.4s ease 0s;
 }
 
